# JTI-extract

./: .gitignore  AGENTS.md  AGENT_HANDOFF.md  AGENT_PROJECT_MEMORY.md  CHANGELOG.md  CURRENT_TASK.md  LICENSE  README.md  README.zh-CN.md  README_EN.md  REVIEW_CHECKLIST.md  RUN_COMMANDS.md  compute_jti_schmidt.py  extract_jti.py  jti超高维sweep问题_原理与操作步骤_更新版.md  jti超高维sweep问题_解决思路_解决方法_更新版.md  pyproject.toml  sitecustomize.py  tdc_layer_scan.py
archived/: README.md
archived/batch_runners/: README.md  run_pseudo_cv_batch.py
archived/configs/: type0ppln.yaml
archived/diagnostics/: COINCIDENCE_TIMELINE.md  README.md  README_jti_delay_alignment.md  analyze_interchannel_delay.py
archived/mode_a/: README.md  sitecustomize.py  tdc_residue_diagnostics.py
archived/mode_b/: README.md  compute_fpc_schmidt.py
archived/scripts/: run_type0ppln_pplus_auto_dim.py
configs/: smoke.yaml  type2.yaml  ultra_sweep.yaml
docs/: CLI.md  COINCIDENCE_TIMELINE.md  DATA_CONTRACT.md  DIAGNOSTICS_40PS.md  METHOD.md  OUTPUTS.md  SCHMIDT_ANALYSIS.md  TOKEN_SUMMARY.md  TROUBLESHOOTING.md  TYPE0PPLN_PPLUS_AUTO_DIM_REPORT.md  ULTRA_JTI_FRAME_LENGTH_CLOSURE_REPORT.md  WORKFLOWS.md  index.md
examples/: generate_simulated_data.py  minimal_example.py  parameter_scan.py  plot_jti.py
examples/data/: README.md
examples/tiny_run/: README.md
jti_extract/: __init__.py
results/: jti_schmidt_summary.csv
results/jti_Type2_2M_3s_2026-01-21_183657/: Type2_2M_3s_jti_dim256_bw20ps.npz  (+3 more)
scripts/: analyze_coincidence_window.py  analyze_ttbin_coincidence_timeline.py  pseudo_cv_from_modeb.py  run_bfc_40_50_batch.py  run_fpc_multiline_analysis.py  run_raw_aligned_scan.py  run_type0ppln_pplus_auto_dim.py
tests/: test_binning.py  test_cli_smoke.py  test_io_contract.py  test_schmidt.py  test_ultra_accumulators.py  test_ultra_aperture_jti.py  test_ultra_aperture_select.py  test_ultra_cli_params.py  test_ultra_contrast_profiles.py  test_ultra_cross_validate.py  test_ultra_diagnostics_pairing.py  test_ultra_io.py  test_ultra_lattice.py  test_ultra_surrogate_controls.py  test_ultra_svd_estimators.py  test_ultra_sweep_orchestration.py  test_ultra_ttbin_adapter.py
tools/: jti_delay_alignment.py
(+88 files in other folders)
