[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jti-extract"
version = "0.3.0"
description = "Raw-aligned FPC JTI extraction from TimeTagger .ttbin data."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "JTI extraction contributors" }]
dependencies = ["numpy"]

[project.optional-dependencies]
plotting = ["matplotlib"]
dev = ["pytest"]
# Swabian TimeTagger Python bindings are distributed with Swabian software,
# not reliably installable from PyPI. See docs/TROUBLESHOOTING.md.

[project.scripts]
jti-raw-aligned = "jti_extract.cli.raw_aligned:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-p", "no:cacheprovider"]
norecursedirs = [".git", ".pytest_cache", ".pytest_tmp", "_tmp*", "_work", "__pycache__"]
